# CrashTracker

./: CMakeLists.txt  CMakePresets.json  CrashTrace.cpp  CrashTrace.h  README.md
backward-cpp-1.6/: backward.cpp  backward.hpp
platform/: CrashTrace_android.cpp  CrashTrace_android.h  CrashTrace_windows.cpp  CrashTrace_windows.h
